--- a/signin.html
+++ b/signin.html
@@ -1,67 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SigIn Lerniio</title>
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="login.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <!-- the google fonts for the html template -->
-       <!-- google fonts -->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-       <!-- the second font -->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-       <!-- recursive -->
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300..1000&display=swap" rel="stylesheet">
-</head>
-<body>
-
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- the second font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- recursive -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Recursive:wght@300..1000&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- login section -->
     <section class="login-main">
-        <div class="login-all">
-            <div class="login-image">
-                <img src="https://img.freepik.com/free-vector/business-man-working-hard-stock-financial-trade-market-diagram-vector-illustration-flat-design_1150-39773.jpg?size=626&ext=jpg&ga=GA1.2.1464239384.1712494870&semt=sph" alt="">
-            </div>
-            <div class="login-form">
-                    <div class="login-already">
-                        <p>Already have an account?</p>
-                        <p>
-                            <button class="login-btn"><a href="./login.html">Login</a></button>
-                        </p>
-                    </div>
-                <!-- login main -->
-                 <h1>Get started with Lerniio!</h1>
-                 <h6>Create your account</h6>
-                 <form action="">
-                    <div class="inputname">
-                        <label for="namecode">Name</label>
-                        <input type="text" class="namecode" placeholder="Enter your username">
-                    </div>
-                    <div class="inputemail">
-                        <label for="emailcode">Email</label>
-                        <input type="email" name="emailcode" placeholder="Enter your email">
-                    </div>
-                    <div class="inputpassword">
-                        <label for="passcode">Password</label>
-                        <input type="password" name="passcode" placeholder="Enter your password">
-                    </div>
-                    <div class="confirmpassword">
-                        <label for="passcode">Confirm Password</label>
-                        <input type="password" name="confirmpasscode" placeholder="Confirm your password">
-                    </div>
-                    <!-- here goes the next and previous button -->
-                    <button class="submit" type="submit"><a href="./login.html">Create your account</a></button>
-                </form>
-            </div>
+      <div class="login-all">
+        <div class="login-image">
+          <img
+            src="https://img.freepik.com/free-vector/business-man-working-hard-stock-financial-trade-market-diagram-vector-illustration-flat-design_1150-39773.jpg?size=626&ext=jpg&ga=GA1.2.1464239384.1712494870&semt=sph"
+            alt=""
+          />
         </div>
+        <div class="login-form">
+          <div class="login-already">
+            <p>Already have an account?</p>
+            <p>
+              <button class="login-btn">
+                <a href="./login.html">Login</a>
+              </button>
+            </p>
+          </div>
+          <!-- login main -->
+          <h1>Get started with Lerniio!</h1>
+          <h6>Create your account</h6>
+          <div class="email error"></div>
+          <form action="">
+            <div class="inputname">
+              <label for="namecode">Name</label>
+              <input
+                type="text"
+                class="namecode"
+                name="namecode"
+                placeholder="Enter your username"
+                required
+              />
+            </div>
+            <div class="inputemail">
+              <label for="emailcode">Email</label>
+              <input
+                type="email"
+                name="emailcode"
+                placeholder="Enter your email"
+                required
+              />
+            </div>
+            <div class="inputpassword">
+              <label for="passcode">Password</label>
+              <input
+                type="password"
+                name="passcode"
+                placeholder="Enter your password"
+                required
+              />
+            </div>
+            <div class="confirmpassword">
+              <label for="passcode">Confirm Password</label>
+              <input
+                type="password"
+                name="confirmpasscode"
+                placeholder="Confirm your password"
+                required
+              />
+            </div>
+            <!-- here goes the next and previous button -->
+            <button class="submit"><a>Create your account</a></button>
+        </div>
+      </div>
     </section>
+    <script>
+      const RegisterForm = document.querySelector("form");
+      const emailError = document.querySelector(".email.error");
 
-<script src="login.js"></script>
-</body>
+      RegisterForm.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const email = RegisterForm.emailcode.value;
+        const username = RegisterForm.namecode.value;
+        const confirmpassword = RegisterForm.confirmpasscode.value;
+        const password = RegisterForm.passcode.value;
+
+        emailError.textContent = "";
+
+        const passwordInput = RegisterForm.passcode;
+        const confirmPasswordInput = RegisterForm.confirmpasscode;
+
+        function validatepassword() {
+          if (passwordInput.value !== confirmPasswordInput.value) {
+            console.log(" failed");
+          }
+        }
+
+        passwordInput.addEventListener("input", validatepassword);
+        confirmPasswordInput.addEventListener("input", validatepassword);
+
+        if (password !== confirmpassword) {
+          emailError.textContent = "password does not match";
+          return;
+        } else {
+          emailError.textContent = "";
+        }
+
+        try {
+          const result = await fetch(
+            // "https://edutech-hmv7.onrender.com/v1/api/user/register",
+            "http://127.0.0.1:8000/v1/api/user/register",
+            {
+              method: "POST",
+              body: JSON.stringify({
+                email: email,
+                password: password,
+                username: username,
+              }),
+              headers: { "Content-Type": "application/json" },
+            }
+          );
+          const data = await result.json();
+          if (data.message) {
+            console.log(data.message);
+            if (data.message) {
+              setTimeout(() => {
+                //window.location.href = "Dashboard.html";
+                window.location.href = "login.html";
+              }, 300);
+            }
+            //window.location.assign("/lerniio-frontend/Lerniio/Dashboard.html");
+            // render page after successful login to home page
+          }
+
+          if (data.error) {
+            console.log(data.error);
+            emailError.textContent = data.error;
+          }
+        } catch (error) {
+          console.log(error);
+        }
+      });
+    </script>
+  </body>
 </html>
