link in dashboard

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -47,11 +47,11 @@
                             </li>
                             <li>
                                 <img src="./asset/school-svgrepo-com.svg" alt="">
-                                <a href="#">Schools</a>
+                                <a href="./school.html">Schools</a>
                             </li>
                             <li>
                                 <img src="./asset/exam-svgrepo-com.svg" alt="">
-                                <a href="#">Examination</a>
+                                <a href="./examination.html">Examination</a>
                             </li>    
                         </ul>
                     </nav>
