--- a/signin.html
+++ b/signin.html
@@ -151,10 +151,11 @@
             if (data.message) {
               setTimeout(() => {
                 //window.location.href = "Dashboard.html";
-                window.location.href = "login.html";
-              }, 300);
+                window.location.assign("/front/login.html");
+                 //window.location.href = "login.html";
+              }, 30);
             }
-            //window.location.assign("/lerniio-frontend/Lerniio/Dashboard.html");
+            
             // render page after successful login to home page
           }
 
