changed on pages

--- a/signin.html
+++ b/signin.html
@@ -151,9 +151,8 @@
             if (data.message) {
               setTimeout(() => {
                 //window.location.href = "Dashboard.html";
-                window.location.assign("/front/login.html");
-                 //window.location.href = "login.html";
-              }, 30);
+                 window.location.href = "login.html";
+              }, 10);
             }
             
             // render page after successful login to home page
