--- a/examination.html
+++ b/examination.html
@@ -42,6 +42,12 @@
       //       document.getElementById("username").textContent = username;
       //     }
       //   }
+
+      const token = localStorage.getItem("token");
+      if (!token) {
+        // Redirect to the login page if the token does not exist
+        window.location.href = "login.html";
+      }
     </script>
   </head>
   <body>
@@ -106,11 +112,11 @@
                 </li>
                 <li>
                   <img src="./asset/school-svgrepo-com.svg" alt="" />
-                  <a href="#">Schools</a>
+                  <a href="./school.html">Schools</a>
                 </li>
                 <li>
                   <img src="./asset/exam-svgrepo-com.svg" alt="" />
-                  <a href="#">Examination</a>
+                  <a href="./examination.html">Examination</a>
                 </li>
               </ul>
             </nav>
