--- a/signin.html
+++ b/signin.html
@@ -143,6 +143,7 @@
                 username: username,
               }),
               headers: { "Content-Type": "application/json" },
+              credentials: "include" ,
             }
           );
           const data = await result.json();
