--- a/login.html
+++ b/login.html
@@ -104,6 +104,7 @@
               method: "POST",
               body: JSON.stringify({ email: email, password: password }),
               headers: { "Content-Type": "application/json" },
+              credentials: "include",
             }
           );
           const data = await result.json();
