--- a/school.html
+++ b/school.html
@@ -30,13 +30,13 @@
     <!-- external cdn - Frameworks -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Extras -->
-      <script>
+      <!-- <script>
         const token = localStorage.getItem('token');
           if (!token) {
           // Redirect to the login page if the token does not exist
           window.location.href = "login.html";
           } 
-      </script>
+      </script> -->
   </head>
   <body>
     <!-- the school template -->
