changed on pages

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Extras -->
 
-    <!-- <script>
+    <script>
            const token = localStorage.getItem('token');
     if (!token) {
       // Redirect to the login page if the token does not exist
@@ -35,7 +35,7 @@
         document.getElementById('username').textContent = username;
       }
     }
-    </script> -->
+    </script>
 </head>
 <body>
     <!-- the navigation section of the dashboard -->
