--- a/Dashboard.html
+++ b/Dashboard.html
@@ -23,18 +23,21 @@
     <!-- Extras -->
 
     <script>
-           const token = localStorage.getItem('token');
-    if (!token) {
-      // Redirect to the login page if the token does not exist
-      window.location.href = "login.html";
-    } else {
-      // Retrieve the username from localStorage
-      const username = localStorage.getItem('username');
-      if (username) {
-        // Display the username
-        document.getElementById('username').textContent = username;
+        document.addEventListener('DOMContentLoaded', (event) => {
+      const token = localStorage.getItem('token');
+      if (!token) {
+        // Redirect to the login page if the token does not exist
+        window.location.href = "login.html";
+      } else {
+        // Retrieve the username from localStorage
+        const username = localStorage.getItem('username');
+        if (username) {
+          // Display the username
+          document.getElementById('username').textContent = username;
+        }
       }
-    }
+    });
+  
     </script>
 </head>
 <body>
