--- a/Dashboard.html
+++ b/Dashboard.html
@@ -42,24 +42,34 @@
 </head>
 <body>
     <!-- the navigation section of the dashboard -->
+    <div class="mobile-header">
+        <div class="mobile-logo">
+            <svg class="mobile-menu" width="30px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#2a025a"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M6 12h12M4 8h16M8 16h8" stroke="#2a025a" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"></path></g></svg>
+            Lerniio
+        </div>
+        <div class="mobile-profile">
+            <svg width="24px" height="24px" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <rect width="48" height="48" fill="white" fill-opacity="0.01"></rect> <path d="M40 28L24 40L8 28" stroke="#2a025a" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M8 10H40" stroke="#2a025a" stroke-width="4" stroke-linecap="round"></path> <path d="M8 18H40" stroke="#2a025a" stroke-width="4" stroke-linecap="round"></path> </g></svg>
+            <img src="./asset/image-thomas.jpg" alt="">
+        </div>
+     </div>
     <section class="navigation-section">
         <div>
             <header class="nav-header">
                 <div class="Dashboard-container">
                     <nav>
+                        <div class="menu-Ham">
+                            <svg width="22px" height="22px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffff" stroke="#ffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>cancel</title> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="work-case" fill="#fff" transform="translate(91.520000, 91.520000)"> <polygon id="Close" points="328.96 30.2933333 298.666667 1.42108547e-14 164.48 134.4 30.2933333 1.42108547e-14 1.42108547e-14 30.2933333 134.4 164.48 1.42108547e-14 298.666667 30.2933333 328.96 164.48 194.56 298.666667 328.96 328.96 298.666667 194.56 164.48"> </polygon> </g> </g> </g></svg>
+                        </div>
                         <div class="logo">
                             <svg width="50px" height="50px" viewBox="0 -37 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" fill="#2a025a"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M216.357806,174.771308 C255.135865,205.772152 279.979747,113.201688 218.194093,96.1350211 C166.345992,81.7687764 114.17384,106.396624 61.8936709,163.861603 C61.8936709,163.861603 158.460759,128.540084 216.357806,174.771308 Z" fill="#7e77b1"> </path> <path d="M62.7578059,163.105485 C99.9156118,124.54346 161.701266,81.5527426 219.274262,97.4312236 C232.668354,101.211814 242.17384,108.98903 248.330802,118.278481 L193.890295,8.42531646 C186.11308,-3.99662447 166.237975,-1.40421941 155.004219,8.10126582 L11.1257384,128.648101 C-1.9443038,139.881857 -2.70042194,159.864979 9.39746835,171.962869 C20.0911392,182.65654 37.049789,183.628692 48.8236287,174.123207 L62.7578059,163.105485 Z" fill="#fff"> </path> </g> </g></svg>
                             Lerniio
-                        </div>
-                        <div class="menu-Ham">
-                            <svg width="32px" height="18px" xmlns="http://www.w3.org/2000/svg"><g fill="#2a025a" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
                         </div>
                         <ul>
                             <li>
                                 <img src="./asset/home-svgrepo-com.svg" alt="">
                                 <a href="./Dashboard.html">Home</a>
                             </li>
-                            <li>
+                            <li class="search-nav">
                                 <img src="./asset/search-globe-svgrepo-com.svg" alt="">
                                 <a href="#">search</a>
                             </li>
@@ -84,7 +94,7 @@
                 </li>
                 <li>
                     <img src="./asset/log-out-svgrepo-com.svg" alt="">
-                    <a class="logout">Log out</a>
+                    <a href="#">Log out</a>
                 </li>
             </ul>
         </div>
@@ -166,9 +176,23 @@
                 </div>
             </div>
             <!-- a scorll effect of different layers of academic contents -->
+            <!-- a scorll effect of different layers of academic contents -->
             <div class="contents-items contents-4">
-                <div>
-                    <img src="https://img.freepik.com/free-vector/placeholder-concept-illustration_114360-4983.jpg?t=st=1718021890~exp=1718025490~hmac=53048ef908b919284e21de41b8af51b8033eb2ee7d4f5ef82980e463698928b9&w=740" alt="">
+                <div class="date-event">
+                    <p class="date-content"></p>
+                    <div>
+                        <!-- the svg contents for the school -->
+                         <img src="./asset/arrow-book-cloud-svgrepo-com.svg" alt="">
+                    </div>
+                </div>
+                <!-- main contents -->
+                <div class="cont">
+                    <h3>Search</h3>
+                    <p class="cont-p">
+                        Lerniio has narrowed down your academic searches regarding institutions and what 
+                        they offer, how to get in and what exams you should prepare for
+                    </p>
+                    <button class="cont-btn"><a href="./school.html">Learn more</a></button>
                 </div>
             </div>
         </section>
