added forgot passord and reset password pages

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -89,12 +89,12 @@
         e.preventDefault();
 
         const email = loginForm.emailcode.value;
-        const password = loginForm.passcode.value;
+        // const password = loginForm.passcode.value;
         emailError.textContent = "";
 
         try {
           const result = await fetch(
-            // "https://young-secretary-shrill-sun-production.pipeops.app/v1/api/user/forgotpassword",
+            //"https://young-secretary-shrill-sun-production.pipeops.app/v1/api/user/forgotpassword",
             "http://127.0.0.1:8000/v1/api/user/forgotpassword",
             {
               method: "POST",
