--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Extras -->
 
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', (event) => {
       const token = localStorage.getItem('token');
       if (!token) {
@@ -266,9 +266,6 @@
       // Display the username
       document.getElementById('username').textContent = username;
     }
-
-    
-
     const apiEndpoint = 'https://young-secretary-shrill-sun-production.pipeops.app/v1/api/school/'; // Replace with your actual API endpoint
 
     // Function to fetch data from the API
