changeson dashboard and css

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Extras -->
 
-    <!-- <script>
+    <script>
         document.addEventListener('DOMContentLoaded', (event) => {
       const token = localStorage.getItem('token');
       if (!token) {
@@ -94,7 +94,7 @@
                 </li>
                 <li>
                     <img src="./asset/log-out-svgrepo-com.svg" alt="">
-                    <a href="#">Log out</a>
+                    <a class="logout">Log out</a>
                 </li>
             </ul>
         </div>
