--- a/Dashboard.html
+++ b/Dashboard.html
@@ -176,40 +176,98 @@
                     </div>
                 </div>
             </div>
-            <div class="filtered filtered-2">
+                        <div class="filtered filtered-2">
                 <!-- the list of university -->
                 <div class="filtering-header">
                     <h1>Universities in Nigeria</h1>
                     <h5>View all</h5>
                 </div>
-                 <div class="filtering">
-                    <p class="school-name">Unilag</p>
-                    <p>300 courses</p>
-                    <p>15 Dept</p>
-                    <p>Jamb/wassce</p>
-                    <p>Lagos state</p>
-                 </div>
-                 <div class="filtering">
-                    <p class="school-name">Uniben</p>
-                    <p>350 courses</p>
-                    <p>10 Dept</p>
-                    <p>Jamb/wassce</p>
-                    <p>Benin state</p>
-                 </div>
-                 <div class="filtering">
-                    <p class="school-name">Caleb</p>
-                    <p>200 courses</p>
-                    <p>11 Dept</p>
-                    <p>Private</p>
-                    <p>Lagos state</p>
-                 </div>
-                 <div class="filtering">
-                    <p class="school-name">Yabatech</p>
-                    <p>200 courses</p>
-                    <p>15 Dept</p>
-                    <p>Jamb/wassce</p>
-                    <p>Lagos state</p>
-                 </div>
+                <div class="filtering-flow">
+                     <div class="filtering">
+                        <p class="school-name">Unilag</p>
+                        <p>300 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Uniben</p>
+                        <p>350 courses</p>
+                        <p>10 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Benin state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Caleb</p>
+                        <p>200 courses</p>
+                        <p>11 Dept</p>
+                        <p>Private</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Yabatech</p>
+                        <p>200 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Caleb</p>
+                        <p>200 courses</p>
+                        <p>11 Dept</p>
+                        <p>Private</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Yabatech</p>
+                        <p>200 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Caleb</p>
+                        <p>200 courses</p>
+                        <p>11 Dept</p>
+                        <p>Private</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Yabatech</p>
+                        <p>200 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Caleb</p>
+                        <p>200 courses</p>
+                        <p>11 Dept</p>
+                        <p>Private</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Yabatech</p>
+                        <p>200 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Caleb</p>
+                        <p>200 courses</p>
+                        <p>11 Dept</p>
+                        <p>Private</p>
+                        <p>Lagos state</p>
+                     </div>
+                     <div class="filtering">
+                        <p class="school-name">Yabatech</p>
+                        <p>200 courses</p>
+                        <p>15 Dept</p>
+                        <p>Jamb/wassce</p>
+                        <p>Lagos state</p>
+                     </div>
+                </div>
             </div>
         </section>
      </section>
