--- a/Dashboard.html
+++ b/Dashboard.html
@@ -252,8 +252,8 @@
                     <p>15 Dept</p>
                     <p>Jamb/wassce</p>
                     <p>Lagos state</p>
-                 </div>
-            </div> -->
+                 </div>-->
+            </div> 
         </section>
      </section>
 
@@ -333,5 +333,6 @@
     logout.addEventListener("click", logoutUser);
 
     </script>
+    <script src="Dashboard.js"></script>
 </body>
 </html>
