--- a/login.html
+++ b/login.html
@@ -77,6 +77,7 @@
                 placeholder="Enter your password"
                 required
               />
+              <p class="forgot-pass"><a href="./forgotpassword.html">Forgot password</a></p>
             </div>
             <button class="submit"><a>Login</a></button>
           </form>
