--- a/examination.html
+++ b/examination.html
@@ -177,7 +177,7 @@
         <ul>
           <li>
             <img src="./asset/help-desk-log-svgrepo-com.svg" alt="" />
-            <a href="#">help</a>
+            <a href="./help.html">help</a>
           </li>
           <li>
             <img src="./asset/log-out-svgrepo-com.svg" alt="" />
