--- a/examination.html
+++ b/examination.html
@@ -375,6 +375,7 @@
                   <li class="listss">
                     Post universities matriculation examination
                   </li>
+                  <li class="listss subjects-listss">Examination subjects syllabus</li>
                 </ol>
               </div>
             </div>
