--- a/Dashboard.html
+++ b/Dashboard.html
@@ -130,7 +130,7 @@
                         Get to know more schools, meet more people, information needed
                         and all it's admission requirements.
                     </p>
-                    <button class="cont-btn">Learn more</button>
+                    <button class="cont-btn"><a href="./school.html">Learn more</a></button>
                 </div>
             </div>
             <!-- Learn about Examinations -->
@@ -149,7 +149,8 @@
                         Learn more about different examinations bodies in Nigeria. Know it's requirements,
                         it's subjects dates and curriculums.
                     </p>
-                    <button class="cont-btn">Learn more</button>
+                    <button class="cont-btn"><a href="./examination.html">Learn more</a></button>
+
                 </div>
             </div>
             <!-- Get exam curriculums -->
@@ -168,7 +169,7 @@
                         Be informed about what you want to study, why you want to study it, 
                         and the opportunities surrounding the course.
                     </p>
-                    <button class="cont-btn">Learn more</button>
+                    <button class="cont-btn"><a href="./school.html">Learn more</a></button>
                 </div>
             </div>
             <!-- a scorll effect of different layers of academic contents -->
