--- a/Dashboard.html
+++ b/Dashboard.html
@@ -182,7 +182,7 @@
                     <h3>Search</h3>
                     <p class="cont-p">
                         Lerniio has narrowed down your academic searches regarding institutions and what 
-                        they offer, how to get in and what exams you should prepare for
+                        they offer.
                     </p>
                     <button class="cont-btn"><a href="./school.html">Learn more</a></button>
                 </div>
